--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -1,27 +1,56 @@
+/*
+Really bad first try :) 
+*/
+
 body {
   background: #eee;
   font-family: sans-serif;
 }
 
 .card {
-  width: 400px;
+  width: 440px;
   background: #fff;
   margin: 16px auto;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 8px;
+  margin-bottom: 0px;
+  margin-top: 8px;
+  font-size: 16px;
+  border: 8px solid white;
 }
 
 .content {
   background: #e3f4ff;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 8px;
+  padding-right: 8px;
+  border-left: 8px solid white;
+  border-right: 8px solid white;  
+  border-bottom: 8px solid white;
+  font-size: 16px;
 }
 
 .button-container {
-  background: #e3f4ff;
+  background: #e3f4ff; 
+  padding: 8px;
+  text-align:center;
+  border-left: 8px solid white;
+  border-right: 8px solid white;
+  border-bottom: 8px solid white;
 }
 
 button {
   background: white;
-  border: 1px solid #eee;
+
+  margin: 0 auto;
+  display: block;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
+
